added event features

--- a/views/admin/admin_dashboard.ejs
+++ b/views/admin/admin_dashboard.ejs
@@ -369,7 +369,7 @@
             <div class="tab-pane fade show active" id="events" role="tabpanel">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h5>Event Management</h5>
-                    <button class="btn btn-primary"><i class="fas fa-plus me-2"></i>Add New Event</button>
+                    <button class="btn btn-primary"><i class="fas fa-plus me-2"></i><a href="/add_event" style="text-decoration: none; color: white;">Add New Event</a></button>
                 </div>
                 
                 <div class="table-container">
